frontend/deploy/travel.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: travel
  namespace: staging
spec:
  minReadySeconds: 15
  revisionHistoryLimit: 3
  template:
    metadata:
      labels:
        app: travel
    spec:
      containers:
        - name: travel
          image: gcr.io/travel-tool/frontend:latest
          command:
            - serve
            - -s
            - -p 5000
          ports:
          - containerPort: 5000
            name: http
          resources:
            requests:
              memory: "64Mi"
              cpu: "100m"
            limits:
              memory: "64Mi"
              cpu: "100m"
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
