frontend/deploy/travel.service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: travel
  namespace: staging
  labels:
    app: travel
spec:
  type: NodePort
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
  selector:
    app: travel
