frontend/deploy/travel.ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: travel
  namespace: staging
  labels:
    app: travel
spec:
  tls: []
  rules:
    - http:
      paths:
        - path: /*
          backend:
            serviceName: travel
            servicePort: http
